--- a/css/style.css
+++ b/css/style.css
@@ -236,4 +236,51 @@ nav .nav-btn:hover {
     background-color: #1b3758; 
     transform: scale(1.0); 
 }
+#contact .contact-icons {
+    margin-bottom: 30px;
+  }
+  
+  #contact .contact-form {
+    max-width: 600px;
+    margin: 0 auto;
+    background: #ffffff1e;
+    padding: 30px;
+    border-radius: 10px;
+    text-align: left;
+  }
+  
+  #contact .contact-form h3 {
+    margin-bottom: 15px;
+  }
+  
+  #contact form input,
+  #contact form textarea {
+    font-family: 'MiFuente';
 
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    border: none;
+  }
+  
+  #contact form button {
+    display: inline-block;
+    background-color: #2c3ff1;
+    color: white;
+    border: none;
+    padding: 12px 24px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 4px 12px rgba(95, 109, 235, 0.3);
+  }
+  
+  #contact form button:hover {
+    background-color: #788aff;
+    transform: scale(1.05);
+  }
+  
+  
